syntax = "proto3";

message MountAzureBlobRequest {
    string targetPath = 1;
	string accountName = 2;
	string containerName = 3;
	string accountKey = 4;
	string tmpPath = 5;
}

message MountAzureBlobResponse {
	string err = 1;
}

service MountService {
	rpc MountAzureBlob(MountAzureBlobRequest) returns (MountAzureBlobResponse) {};
}
